[tool.poetry]
name = "telegram_user_bot"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
cryptg = "^0.2.post4"
aiohttp = "^3.8.1"
Telethon = "^1.24.0"
spacy = "^3.2.3"
configparser = "^5.2.0"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
